--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,13 @@
+:root {
+  --gradient-color: rgba(255, 255, 255, 0.6);
+  --gradient-first-percentage: 1%;
+}
 *,
 ::after,
 ::before {
   box-sizing: border-box;
   margin: 0;
+  font-family: tahoma;
   padding: 0;
 }
 #app {
@@ -20,9 +25,7 @@ body {
   display: flex;
   flex-direction: column;
   background: #000;
-  font-family: tahoma;
   min-height: 100vh;
-  padding-bottom: 2rem;
 }
 img {
   width: 400px;
@@ -67,6 +70,96 @@ img {
 .copyright > div:nth-child(2) img {
   width: 105px;
 }
+.top {
+  flex: 1;
+  display: grid;
+  place-content: center;
+  gap: 2rem;
+}
+#black {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 2rem;
+}
+#blue {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 100%;
+  background: #4f84eb;
+  color: #fff;
+  display: none;
+}
+#blue main {
+  flex: 7;
+  display: flex;
+}
+#blue main :is(.left, .right) {
+  flex: 1;
+  display: flex;
+  font-size: 3rem;
+  font-style: italic;
+  align-items: center;
+}
+#blue main .right span {
+  text-shadow: 1px 2px 0 #0037a9;
+}
+#blue :is(header, footer) {
+  background: #0037a9;
+  flex: 1;
+  position: relative;
+}
+#blue :is(header, footer):before,
+#blue :is(header, footer):after {
+  content: "";
+  height: 3px;
+  width: 10px;
+  left: 50%;
+  position: absolute;
+}
+#blue header:after {
+  background: linear-gradient(
+    to left,
+    var(--gradient-color) var(--gradient-first-percentage),
+    transparent
+  );
+  transform: translate(-100%, 100%);
+}
+#blue header:before {
+  transform: translate(0%, 100%);
+  background: linear-gradient(
+    to right,
+    var(--gradient-color) var(--gradient-first-percentage),
+    transparent
+  );
+}
+#blue header:after,
+#blue header:before {
+  bottom: 0;
+  width: 50%;
+}
+#blue footer:after,
+#blue footer:before {
+  top: 0;
+  width: 50%;
+}
+#blue footer:after {
+  background: linear-gradient(
+    to left,
+    var(--gradient-color) var(--gradient-first-percentage),
+    transparent
+  );
+  transform: translate(-100%, -100%);
+}
+#blue footer:before {
+  transform: translate(0%, -100%);
+  background: linear-gradient(
+    to right,
+    var(--gradient-color) var(--gradient-first-percentage),
+    transparent
+  );
+}
 
 @keyframes loaderDots {
   0% {
@@ -83,15 +176,4 @@ img {
     visibility: hidden;
     left: -5%;
   }
-}
-.top {
-  flex: 1;
-  display: grid;
-  place-content: center;
-  gap: 2rem;
-}
-#black {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
 }
