--- a/styles/pages/blue.css
+++ b/styles/pages/blue.css
@@ -1,5 +1,5 @@
 #blue {
-  cursor: url("assets/cursors/default.cur"), auto;
+  cursor: url("assets/cursor/default.cur"), auto;
   flex-direction: column;
   min-height: 100vh;
   width: 100%;
