--- a/styles/pages/desktop.css
+++ b/styles/pages/desktop.css
@@ -1,12 +1,19 @@
 #desktop {
+  --menu-height: 45px;
+  --grid-size: 8;
+  --icon-scale: 1.3;
+
+  padding: 1rem;
   cursor: url("assets/cursor/default.cur"), auto;
-  flex-direction: column;
   min-height: 100vh;
   width: 100%;
   background: url(assets/background.jpg) no-repeat;
   background-size: cover;
   color: #fff;
   display: none;
+  padding-bottom: var(--menu-height);
+  grid-template-columns: repeat(var(--grid-size), 1fr);
+  grid-template-rows: repeat(var(--grid-size), 1fr);
 }
 
 .menubar {
@@ -14,7 +21,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  height: 33px;
+  height: var(--menu-height);
   display: flex;
   background: linear-gradient(
     180deg,
@@ -28,9 +35,38 @@
     #003dd7
   );
 }
+#desktop button {
+  background: linear-gradient(to bottom, #009933 0%, #006600 100%);
+  color: white;
+  border-radius: 5px;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  width: 100px;
+}
 
-.menubar button {
-  all: unset;
-  width: 90px;
-  background: url(assets/start.png);
+#desktop button:hover {
+  background: linear-gradient(to bottom, #00b359 0%, #009933 100%);
+}
+
+#desktop .icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  user-select: none;
+}
+#desktop .icon .icon__image {
+  background: url(assets/icons.png) 0 0 no-repeat;
+  background-size: calc(576px * var(--icon-scale))
+    calc(608px * var(--icon-scale));
+  width: calc(var(--icon-scale) * 32px);
+  height: calc(var(--icon-scale) * 32px);
+}
+#desktop .icon .icon__label {
+  background: rgb(79, 69, 220);
+  width: fit-content;
+  padding: 2px;
+  margin-top: 0.5rem;
+  font-size: 0.95rem;
 }
