--- a/styles/pages/desktop.css
+++ b/styles/pages/desktop.css
@@ -1,6 +1,6 @@
 #desktop {
   --menu-height: 45px;
-  --grid-size: 8;
+  --grid-size: 10;
   --icon-scale: 1.3;
 
   padding: 1rem;
@@ -57,9 +57,11 @@
   user-select: none;
 }
 #desktop .icon .icon__image {
-  background: url(assets/icons.png) 0 0 no-repeat;
+  background: url(assets/icons.png);
   background-size: calc(576px * var(--icon-scale))
     calc(608px * var(--icon-scale));
+  background-position-x: calc(-1 * var(--x, 0) * 32px * var(--icon-scale));
+  background-position-y: calc(-1 * var(--y, 0) * 32px * var(--icon-scale));
   width: calc(var(--icon-scale) * 32px);
   height: calc(var(--icon-scale) * 32px);
 }
